--- a/post-process/PythonScripts/gysdata/data_structure_XYVxVy.yaml
+++ b/post-process/PythonScripts/gysdata/data_structure_XYVxVy.yaml
@@ -5,7 +5,7 @@ fdistribu:
   # the list of HDF5 datasets where this field can be found (this can also be a single dict)
   path:
     # file regex, in the regex we capture values that can be used in filename_coord (?P<NAME>CAPTURE)
-    file: 'VOICEXX_\d+.h5'
+    file: 'GYSELALIBXX_\d+.h5'
     # dataset regex
     dataset: 'fdistribu'
   dimensions:
@@ -17,7 +17,7 @@ fdistribu:
     # get the coordinates of this dimension from a field in another file
     species: { constant_coord: [ "electrons", "ions" ] }
   - &xd
-    x:       { global_coord: [ &initstate "VOICEXX_initstate.h5", MeshX ] }
+    x:       { global_coord: [ &initstate "GYSELALIBXX_initstate.h5", MeshX ] }
   - &yd
     y:       { global_coord: [ *initstate , MeshY ] }  
   - &vxd
@@ -28,13 +28,13 @@ fdistribu:
 
 electrostatic_potential:
   dimensions: [ *timed , *xd , *yd  ]
-  path: { file: 'VOICEXX_\d+.h5', dataset: 'electrostatic_potential' }
+  path: { file: 'GYSELALIBXX_\d+.h5', dataset: 'electrostatic_potential' }
 
 fdistribu_charges:
   dimensions: [ *speciesd ]
-  path: { file: 'VOICEXX_initstate.h5', dataset: 'fdistribu_charges' }
+  path: { file: 'GYSELALIBXX_initstate.h5', dataset: 'fdistribu_charges' }
 
 fdistribu_masses:
   dimensions: [ *speciesd ]
-  path: { file: 'VOICEXX_initstate.h5', dataset: 'fdistribu_masses' }
+  path: { file: 'GYSELALIBXX_initstate.h5', dataset: 'fdistribu_masses' }
 
