--- a/post-process/PythonScripts/gysdata/data_structure_neutral.yaml
+++ b/post-process/PythonScripts/gysdata/data_structure_neutral.yaml
@@ -4,7 +4,7 @@ fdistribu:
   # the list of HDF5 datasets where this field can be found (this can also be a single dict)
   path:
     # file regex, in the regex we capture values that can be used in filename_coord (?P<NAME>CAPTURE)
-    file: 'VOICEXX_\d+.h5'
+    file: 'GYSELALIBXX_\d+.h5'
     # dataset regex
     dataset: 'fdistribu'
   dimensions:
@@ -13,15 +13,15 @@ fdistribu:
   - &speciesd
     species: { constant_coord: [ 'electrons', 'ions' ] }
   - &xd
-    x:       { global_coord: [ &initstate "VOICEXX_initstate.h5", MeshX ] }
+    x:       { global_coord: [ &initstate "GYSELALIBXX_initstate.h5", MeshX ] }
   - &vxd
-    v_x: { global_coord: ['VOICEXX_initstate.h5', 'MeshVx'] }
+    v_x: { global_coord: ['GYSELALIBXX_initstate.h5', 'MeshVx'] }
 
 fluid_moments:
   # the list of HDF5 datasets where this field can be found (this can also be a single dict)
   path:
     # file regex, in the regex we capture values that can be used in filename_coord (?P<NAME>CAPTURE)
-    file: 'VOICEXX_\d+.h5'
+    file: 'GYSELALIBXX_\d+.h5'
     # dataset regex
     dataset: 'fluid_moments'
   dimensions:
@@ -34,41 +34,41 @@ fluid_moments:
 
 fdistribu_masses:
   dimensions: [ *speciesd ]
-  path: { file: 'VOICEXX_initstate.h5', dataset: 'fdistribu_masses' }
+  path: { file: 'GYSELALIBXX_initstate.h5', dataset: 'fdistribu_masses' }
 
 neutrals_masses:
   dimensions: [ *speciesnd ]
-  path: { file: 'VOICEXX_initstate.h5', dataset: 'neutrals_masses' }
+  path: { file: 'GYSELALIBXX_initstate.h5', dataset: 'neutrals_masses' }
 
 normalisation_coeff_neutrals:
   dimensions: [ ]
-  path: { file: 'VOICEXX_initstate.h5', dataset: 'normalisation_coeff_neutrals' }
+  path: { file: 'GYSELALIBXX_initstate.h5', dataset: 'normalisation_coeff_neutrals' }
 
 norm_coeff_rate_neutrals:
   dimensions: [ ]
-  path: { file: 'VOICEXX_initstate.h5', dataset: 'norm_coeff_rate_neutrals' }
+  path: { file: 'GYSELALIBXX_initstate.h5', dataset: 'norm_coeff_rate_neutrals' }
 
 charge_exchange_coefficients:
   dimensions: 
     - cx: { constant_coord: [ '0', '1', '2', '3', '4' ] }
-  path: { file: 'VOICEXX_initstate.h5', dataset: 'charge_exchange_coefficients' }
+  path: { file: 'GYSELALIBXX_initstate.h5', dataset: 'charge_exchange_coefficients' }
 
 ionisation_slope_coefficients:
   dimensions: 
     - i: { constant_coord: [ '0', '1', '2', '3', '4', '5' ] }
-  path: { file: 'VOICEXX_initstate.h5', dataset: 'ionisation_slope_coefficients' }
+  path: { file: 'GYSELALIBXX_initstate.h5', dataset: 'ionisation_slope_coefficients' }
 
 ionisation_intercept_coefficients:
   dimensions: 
     - i: { constant_coord: [ '0', '1', '2', '3', '4', '5' ] }
-  path: { file: 'VOICEXX_initstate.h5', dataset: 'ionisation_intercept_coefficients' }
+  path: { file: 'GYSELALIBXX_initstate.h5', dataset: 'ionisation_intercept_coefficients' }
 
 recombination_slope_coefficients:
   dimensions: 
     - r: { constant_coord: [ '0', '1' ] }
-  path: { file: 'VOICEXX_initstate.h5', dataset: 'recombination_slope_coefficients' }
+  path: { file: 'GYSELALIBXX_initstate.h5', dataset: 'recombination_slope_coefficients' }
 
 recombination_intercept_coefficients:
   dimensions: 
     - r: { constant_coord: [ '0', '1' ] }
-  path: { file: 'VOICEXX_initstate.h5', dataset: 'recombination_intercept_coefficients' }
+  path: { file: 'GYSELALIBXX_initstate.h5', dataset: 'recombination_intercept_coefficients' }
