--- a/post-process/PythonScripts/gysdata/data_structure_sheath.yaml
+++ b/post-process/PythonScripts/gysdata/data_structure_sheath.yaml
@@ -5,7 +5,7 @@ fdistribu:
   # the list of HDF5 datasets where this field can be found (this can also be a single dict)
   path:
     # file regex, in the regex we capture values that can be used in filename_coord (?P<NAME>CAPTURE)
-    file: 'VOICEXX_\d+.h5'
+    file: 'GYSELALIBXX_\d+.h5'
     # dataset regex
     dataset: 'fdistribu'
   dimensions:
@@ -17,70 +17,70 @@ fdistribu:
     # get the coordinates of this dimension from a field in another file
     species: { constant_coord: [ "electrons", "ions" ] }
   - &xd
-    x:       { global_coord: [ &initstate "VOICEXX_initstate.h5", MeshX ] }
+    x:       { global_coord: [ &initstate "GYSELALIBXX_initstate.h5", MeshX ] }
   - &vxd
     v_x:     { global_coord: [ *initstate , MeshVx ] }
 
 electrostatic_potential:
   dimensions: [ *timed , *xd ]
-  path: { file: 'VOICEXX_\d+.h5', dataset: 'electrostatic_potential' }
+  path: { file: 'GYSELALIBXX_\d+.h5', dataset: 'electrostatic_potential' }
 
 fdistribu_charges:
   dimensions: [ *speciesd ]
-  path: { file: 'VOICEXX_initstate.h5', dataset: 'fdistribu_charges' }
+  path: { file: 'GYSELALIBXX_initstate.h5', dataset: 'fdistribu_charges' }
 
 fdistribu_masses:
   dimensions: [ *speciesd ]
-  path: { file: 'VOICEXX_initstate.h5', dataset: 'fdistribu_masses' }
+  path: { file: 'GYSELALIBXX_initstate.h5', dataset: 'fdistribu_masses' }
 
 fdistribu_eq:
   dimensions: [ *speciesd , *vxd ]
-  path: { file: 'VOICEXX_initstate.h5', dataset: 'fdistribu_eq' }
+  path: { file: 'GYSELALIBXX_initstate.h5', dataset: 'fdistribu_eq' }
 
 collinter_nustar0:
   dimensions: [ ]
-  path: { file: 'VOICEXX_initstate.h5', dataset: 'collinter_nustar0' }
+  path: { file: 'GYSELALIBXX_initstate.h5', dataset: 'collinter_nustar0' }
 
 Lx:
   dimensions: [ ]
-  path: { file: 'VOICEXX_initstate.h5', dataset: 'Lx' }
+  path: { file: 'GYSELALIBXX_initstate.h5', dataset: 'Lx' }
 
 krook_sink_constant_amplitude:
   dimensions: [ ]
-  path: { file: 'VOICEXX_initstate.h5', dataset: 'krook_sink_constant_amplitude' }
+  path: { file: 'GYSELALIBXX_initstate.h5', dataset: 'krook_sink_constant_amplitude' }
 
 krook_sink_constant_mask:
   dimensions: [ *xd ]
-  path: { file: 'VOICEXX_initstate.h5', dataset: 'krook_sink_constant_mask' }
+  path: { file: 'GYSELALIBXX_initstate.h5', dataset: 'krook_sink_constant_mask' }
 
 krook_sink_constant_ftarget:
   dimensions: [ *vxd ]
-  path: { file: 'VOICEXX_initstate.h5', dataset: 'krook_sink_constant_ftarget' }
+  path: { file: 'GYSELALIBXX_initstate.h5', dataset: 'krook_sink_constant_ftarget' }
 
 krook_sink_adaptive_amplitude:
   dimensions: [ ]
-  path: { file: 'VOICEXX_initstate.h5', dataset: 'krook_sink_adaptive_amplitude' }
+  path: { file: 'GYSELALIBXX_initstate.h5', dataset: 'krook_sink_adaptive_amplitude' }
 
 krook_sink_adaptive_mask:
   dimensions: [ *xd ]
-  path: { file: 'VOICEXX_initstate.h5', dataset: 'krook_sink_adaptive_mask' }
+  path: { file: 'GYSELALIBXX_initstate.h5', dataset: 'krook_sink_adaptive_mask' }
 
 krook_sink_adaptive_ftarget:
   dimensions: [ *vxd ]
-  path: { file: 'VOICEXX_initstate.h5', dataset: 'krook_sink_adaptive_ftarget' }
+  path: { file: 'GYSELALIBXX_initstate.h5', dataset: 'krook_sink_adaptive_ftarget' }
 
 krook_sink_adaptive_density:
   dimensions: [ ]
-  path: { file: 'VOICEXX_initstate.h5', dataset: 'krook_sink_adaptive_density' }
+  path: { file: 'GYSELALIBXX_initstate.h5', dataset: 'krook_sink_adaptive_density' }
 
 kinetic_source_amplitude:
   dimensions: [ ]
-  path: { file: 'VOICEXX_initstate.h5', dataset: 'kinetic_source_amplitude' }
+  path: { file: 'GYSELALIBXX_initstate.h5', dataset: 'kinetic_source_amplitude' }
 
 kinetic_source_spatial_extent:
   dimensions: [ *xd ]
-  path: { file: 'VOICEXX_initstate.h5', dataset: 'kinetic_source_spatial_extent' }
+  path: { file: 'GYSELALIBXX_initstate.h5', dataset: 'kinetic_source_spatial_extent' }
 
 kinetic_source_velocity_shape:
   dimensions: [ *vxd ]
-  path: { file: 'VOICEXX_initstate.h5', dataset: 'kinetic_source_velocity_shape' }
+  path: { file: 'GYSELALIBXX_initstate.h5', dataset: 'kinetic_source_velocity_shape' }
