Change the "p" into "theta" (#145)
In the geometryRTheta a lot of "p" for polar remain in the files. I
changed them into "theta" as we decided to use "theta" instead of "p".

--- a/simulations/geometryRTheta/diocotron/CMakeLists.txt
+++ b/simulations/geometryRTheta/diocotron/CMakeLists.txt
@@ -29,10 +29,10 @@ function (diocotron_executable PREDCORR_METHOD TIME_METHOD )
 
             gslx::poisson_RTheta
             gslx::geometry_RTheta
-            gslx::interpolation_2D_rp
+            gslx::interpolation_RTheta
             gslx::io
-            gslx::advection_rp
-            gslx::time_integration_rp
+            gslx::advection_RTheta
+            gslx::time_integration_RTheta
             gslx::quadrature
             gslx::utils
             gslx::diocotron_init_eq
