--- a/simulations/geometryRTheta/vortex_merger/CMakeLists.txt
+++ b/simulations/geometryRTheta/vortex_merger/CMakeLists.txt
@@ -13,15 +13,15 @@ target_link_libraries(vortex_merger
         Eigen3::Eigen
 
 
-        gslx::advection_rp
+        gslx::advection_RTheta
         gslx::geometry_RTheta
         gslx::io
-        gslx::interpolation_2D_rp
+        gslx::interpolation_RTheta
         gslx::paraconfpp
         gslx::poisson_RTheta
         gslx::quadrature
         gslx::simulation_utils
-        gslx::time_integration_rp
+        gslx::time_integration_RTheta
         gslx::utils
         gslx::vortex_merger_init_eq
 )
