--- a/tests/geometryRTheta/advection_rtheta/CMakeLists.txt
+++ b/tests/geometryRTheta/advection_rtheta/CMakeLists.txt
@@ -30,14 +30,16 @@ foreach(MAPPING_TYPE "CIRCULAR_MAPPING_PHYSICAL" "CZARNY_MAPPING_PHYSICAL" "CZAR
             PUBLIC
                 DDC::core
                 DDC::pdi
-                paraconf::paraconf
-                PDI::pdi
-                Eigen3::Eigen
 
+                paraconf::paraconf
+
+                PDI::pdi
+
+                Eigen3::Eigen
 
                 gslx::advection_RTheta
                 gslx::geometry_RTheta
-                gslx::interpolation_RTheta
+                gslx::interpolation
                 gslx::io
                 gslx::paraconfpp
                 gslx::quadrature
@@ -69,14 +71,17 @@ target_link_libraries(advection_ALL
     PUBLIC
 		DDC::core
 		DDC::pdi
+
 		paraconf::paraconf
+
 		PDI::pdi
+
 		Eigen3::Eigen
 
 
 		gslx::advection_RTheta
 		gslx::geometry_RTheta
-		gslx::interpolation_RTheta
+		gslx::interpolation
 		gslx::io
 		gslx::paraconfpp
 		gslx::quadrature
