Add tests to check static assertions are correctly raised

--- a/tests/data_types/CMakeLists.txt
+++ b/tests/data_types/CMakeLists.txt
@@ -20,3 +20,5 @@ target_link_libraries(unit_tests_data_types
 )
 
 gtest_discover_tests(unit_tests_data_types DISCOVERY_MODE PRE_TEST)
+
+add_subdirectory(static_assert_tests)
