Add extra assertion test

--- a/tests/data_types/static_assert_tests/CMakeLists.txt
+++ b/tests/data_types/static_assert_tests/CMakeLists.txt
@@ -36,5 +36,6 @@ add_static_assert_test(tensor_mul_contra_contra "Additionally repeated indices s
 add_static_assert_test(tensor_mul_incompatible_index_set "Cannot sum over incompatible VectorIndexSets.")
 add_static_assert_test(tensor_mul_3_indices "You should not have more than two of any one index in an index expression.")
 add_static_assert_test(tensor_mul_multiple_types "All tensors in a tensor_mul must have the same element type.")
+add_static_assert_test(tensor_mul_wrong_index "Index is not compatible with tensor type")
 
 
