Add MPI to Landau4D simulation (#142)
Add MPI to Landau4D simulation. Fixes #119 
In order to handle the data in the simplest layout, the default geometry
is changed from XYVxVy to VxVyXY. Mpi operators are added for Vlasov and
the ChargeDensityCalculator

--- a/src/geometryXYVxVy/poisson/CMakeLists.txt
+++ b/src/geometryXYVxVy/poisson/CMakeLists.txt
@@ -2,6 +2,7 @@
 
 add_library("poisson_xy" STATIC
     chargedensitycalculator.cpp
+    mpichargedensitycalculator.cpp
     nullqnsolver.cpp
     qnsolver.cpp
 )
@@ -14,11 +15,14 @@ target_link_libraries("poisson_xy"
     PUBLIC
         DDC::core
         DDC::fft
+
         gslx::geometry_xyvxvy
         gslx::pde_solvers
         gslx::quadrature
         gslx::speciesinfo
         gslx::utils
+
+        MPI::MPI_CXX
 )
 
 add_library("gslx::poisson_xy" ALIAS "poisson_xy")
