--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -2,6 +2,7 @@ site_name: GyselalibX
 repo_url: https://github.com/gyselax/gyselalibxx/
 
 docs_dir: 'mkdoc/'
+use_directory_urls: false
 
 nav:
   - General: 
@@ -12,7 +13,9 @@ nav:
     - toolchains 
     - Simulations: simulations
     - Tests: tests
-  - Tutorials: docs/tutorials
+  - Tutorials: 
+    - docs/tutorials
+    - MkDocs: docs/README.md
     # - Getting Started: getting_started.md
     # - Coding Standards: CODING_STANDARD.md
     # - Git Version Control: Using_git.md
@@ -35,7 +38,18 @@ markdown_extensions:
   - pymdownx.arithmatex:
       generic: true
 
+
+# extra_javascript:
+#   - jscript/katex.js
+#   - https://unpkg.com/katex@0/dist/katex.min.js
+#   - https://unpkg.com/katex@0/dist/contrib/auto-render.min.js
+
+
+extra_css:
+  - https://unpkg.com/katex@0/dist/katex.min.css
+
 extra_javascript:
-  - jscript/mathjax.js
+  - docs/jscript/mathjax.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
 
