--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -1,86 +1,82 @@
-site_name: GyselalibX
-repo_url: https://github.com/gyselax/gyselalibxx/
+# Project Metadata
+site_name: GyselalibX                              # Name of the MkDocs documentation site
+repo_url: https://github.com/gyselax/gyselalibxx/  # Repository URL for linking to the source code
 
-docs_dir: 'mkdoc/'
-use_directory_urls: false
+# Documentation Source
+docs_dir: 'mkdoc/'          # Directory where MkDocs looks for documentation files
+use_directory_urls: false   # Keeps file extensions in URLs (e.g., docs/index.html instead of docs/)
 
+# Navigation Structure
 nav:
-  - General: 
-    - Home: README.md 
-    - Installation: docs/tutorials/install.md
-  - Documentation:
-    - Source: src
-    - toolchains 
-    - Simulations: simulations
-    - Tests: tests
-  - Tutorials: docs/tutorials
+  - General:                    # General project information
+      - Home: README.md                         # Main landing page
+      - Installation: docs/tutorials/install.md # Installation guide
+  - Documentation:              # Main documentation section
+      - Source: src                             # Link to the source directory
+      - toolchains                              # Placeholder for toolchain-related documentation
+      - Simulations: simulations                # Documentation on simulations
+      - Tests: tests                            # Testing documentation
+  - Tutorials: docs/tutorials   # Section for tutorials
 
-  - MkDocs: docs/README.md
-   
-  - API:
+  - MkDocs: docs/README.md      # Documentation on how to use MkDocs for this project
+
+  - API:  # API reference documentation
       - Gyselalib++:
-          - 'Classes':
+          - 'Classes':  # Class-related documentation
               - 'Class List': 'gyselalibxx/annotated.md'
               - 'Class Index': 'gyselalibxx/classes.md'
               - 'Class Hierarchy': 'gyselalibxx/hierarchy.md'
-          - 'Namespaces':
+          - 'Namespaces':  # Namespace-related documentation
               - 'Namespace List': 'gyselalibxx/namespaces.md'
               - 'Namespace Members': 'gyselalibxx/namespace_members.md'
               - 'Namespace Member Functions': 'gyselalibxx/namespace_member_functions.md'
               - 'Namespace Member Variables': 'gyselalibxx/namespace_member_variables.md'
               - 'Namespace Member Typedefs': 'gyselalibxx/namespace_member_typedefs.md'
               - 'Namespace Member Enumerations': 'gyselalibxx/namespace_member_enums.md'
-          - 'Functions': 'gyselalibxx/functions.md'
-          - 'Variables': 'gyselalibxx/variables.md'
-          - 'Macros': 'gyselalibxx/macros.md'
-          - 'Files': 'gyselalibxx/files.md'
+          - 'Functions': 'gyselalibxx/functions.md'  # Function documentation
+          - 'Variables': 'gyselalibxx/variables.md'  # Global variables
+          - 'Macros': 'gyselalibxx/macros.md'  # Macro definitions
+          - 'Files': 'gyselalibxx/files.md'  # File-level documentation
 
-theme: readthedocs
+# Theme Configuration
+theme: readthedocs  # Uses the ReadTheDocs theme for the site
 
+# Plugins for Extended Functionality
 plugins:
-  - mkdocs-pdf
-  - search
-  - include_dir_to_nav:
-      flat: false
-      file_name_as_title: true
-  - mkdoxy:
+  - mkdocs-pdf                            # Enables PDF export of documentation
+  - search                                # Provides search functionality
+  - include_dir_to_nav:                   # Automatically includes directories in navigation
+      flat: false                         # Preserves directory structure
+      file_name_as_title: true            # Uses file names as titles in navigation
+  - mkdoxy:                               # Integrates Doxygen-generated documentation into MkDocs
       projects:
         gyselalibxx:
-          src-dirs: ../src
-          full-doc: True
-          doxy-cfg:
-            FILE_PATTERNS: "*.cpp *.h*"
-            RECURSIVE: True
-            EXTRACT_ALL: False
-            EXCLUDE_SYMBOLS: "detail details mapping_detail"
-            EXTRACT_LOCAL_CLASSES: True
-            BUILTIN_STL_SUPPORT: Yes
-            CLANG_ASSISTED_PARSING: Yes
-            ENUM_VALUES_PER_LINE: 1
-            FULL_PATH_NAMES: True
-            GENERATE_TREEVIEW: True
-            SHOW_FILES: True
-            SHOW_INCLUDE_FILES: True
-            TYPEDEF_HIDES_STRUCT: True
+          src-dirs: ../src                # Source directory containing C++ code
+          full-doc: True                  # Generates full documentation
+          doxy-cfg:                       # Doxygen configuration settings
+            FILE_PATTERNS: "*.cpp *.h*"   # Files to process
+            RECURSIVE: True               # Scan directories recursively
+            EXTRACT_ALL: False            # Only extract documented elements
+            EXCLUDE_SYMBOLS: "detail details mapping_detail"  # Exclude internal namespaces
+            EXTRACT_LOCAL_CLASSES: True   # Include local classes
+            BUILTIN_STL_SUPPORT: Yes      # Enable STL class parsing
+            CLANG_ASSISTED_PARSING: Yes   # Use Clang for improved parsing
+            ENUM_VALUES_PER_LINE: 1       # Display enum values one per line
+            FULL_PATH_NAMES: True         # Show full file paths
+            GENERATE_TREEVIEW: True       # Enable a tree structure in the navigation
+            SHOW_FILES: True              # Display file list in documentation
+            SHOW_INCLUDE_FILES: True      # Show included header files
+            TYPEDEF_HIDES_STRUCT: True    # Hide struct definitions when typedefs are used
+            WARN_LOGFILE: doxygen.log     # Save warnings to a log file
 
-
+# Markdown Extensions
 markdown_extensions:
-  - attr_list
-  - pymdownx.arithmatex:
+  - attr_list             # Allows setting attributes in markdown elements
+  - pymdownx.arithmatex:  # Enables MathJax for LaTeX-style math rendering
       generic: true
 
-
-# extra_javascript:
-#   - jscript/katex.js
-#   - https://unpkg.com/katex@0/dist/katex.min.js
-#   - https://unpkg.com/katex@0/dist/contrib/auto-render.min.js
-
-
-# extra_css:
-#   - https://unpkg.com/katex@0/dist/katex.min.css
-
+# Additional JavaScript for Enhanced Functionality
 extra_javascript:
-  - docs/jscript/mathjax.js
-  - https://polyfill.io/v3/polyfill.min.js?features=es6
-  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
-
+  - docs/jscript/mathjax.js                               # Custom script for MathJax integration
+  - https://polyfill.io/v3/polyfill.min.js?features=es6   # Ensures compatibility with older browsers
+  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js      # Loads MathJax for rendering mathematical equations
