--- a/.github/workflows/static_analyses.yml
+++ b/.github/workflows/static_analyses.yml
@@ -91,15 +91,26 @@ jobs:
         run: |
           cmake -DGYSELALIBXX_COMPILE_SOURCE=OFF -DGYSELALIBXX_BUILD_DOCUMENTATION=ON -B build -S .
         shell: bash
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.11
+      - name: Install Python dependencies
+        run:
+          pip install -r requirements.txt
+        shell: bash
+        working-directory: ./docs
       - name: Make documenation
         run: |
           # Make docs
-          cmake --build build --target doc
+          python3 docs/prepare_mkdocs.py . docs/mkdoc build-docs/ vendor/ build docs/mkdoc
+          cd docs
+          mkdocs build
         shell: bash
         continue-on-error: true
       - name: Check for new errors
         run: |
-          cat build/docs/doxygen.log
+          cat docs/doxygen.log
           # Get files which have changed in this merge request
           git diff ${{ github.event.pull_request.base.sha || github.event.merge_group.base_sha }}..${{ github.event.pull_request.head.sha || github.event.merge_group.head_sha }} --no-indent-heuristic --unified=0 --output=pull_new_files.txt --no-color --diff-filter=A
           python3 ci_tools/check_readme_presence.py pull_new_files.txt
