Ignore .sty and .bib files

--- a/.typos.toml
+++ b/.typos.toml
@@ -20,5 +20,7 @@ color = "color"
 colors = "colors"
 
 [files]
-extend-exclude = ["*.tex"
+extend-exclude = ["*.tex",
+                  "*.bib",
+                  "*.sty"
                   ]
