--- a/.github/workflows/static_analyses.yml
+++ b/.github/workflows/static_analyses.yml
@@ -84,6 +84,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Install doxygen
+        run:
+          sudo apt-get install doxygen
+        shell: bash
       - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
