--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,6 @@ jobs:
 
   Docs:
     if: github.repository == 'gyselax/gyselalibxx'
-    needs: docker
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -56,7 +55,7 @@ jobs:
           path: doc_branch
       - name: Install doxygen
         run: |
-          sudo apt install doxygen
+          sudo apt-get install doxygen
         shell: bash
       - name: Set up Python 3.11
         uses: actions/setup-python@v5
@@ -69,7 +68,7 @@ jobs:
         working-directory: ./code_branch/docs
       - name: Generate docs
         run: |
-          python3 docs/prepare_mkdocs.py . docs/mkdoc build-docs/ vendor/ build docs/mkdoc
+          python3 docs/prepare_mkdocs.py . docs/mkdoc vendor/ docs/mkdoc
           cd docs
           mkdocs build
         shell: bash
