typos.toml do not correct Comput. Phys. Commun.

--- a/.typos.toml
+++ b/.typos.toml
@@ -18,6 +18,7 @@ Ax = "Ax"
 ax = "ax"
 color = "color"
 colors = "colors"
+"Comput. Phys. Commun." = "Comput. Phys. Commun."
 
 [files]
 extend-exclude = ["*.tex",
