Try the markdownlint action

--- a/.github/workflows/static_analyses.yml
+++ b/.github/workflows/static_analyses.yml
@@ -34,6 +34,11 @@ jobs:
       - name: Get Python dependencies
         run: |
           pip install numpy
+      - name: Markdownlint
+        uses: DavidAnson/markdownlint-cli2-action@v19
+        with:
+          globs: |
+            **/*.md
       - name: Check files
         id: markdown
         shell: bash
