Ignore line length and try to fix

--- a/.github/workflows/static_analyses.yml
+++ b/.github/workflows/static_analyses.yml
@@ -37,6 +37,8 @@ jobs:
       - name: Markdownlint
         uses: DavidAnson/markdownlint-cli2-action@v19
         with:
+          config: '.markdownlint.json'
+          fix: true
           globs: |
             **/*.md
       - name: Check files
