--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -56,7 +56,7 @@ jobs:
 
   coverage_test:
     name: Coverage Test
-    needs: pre_job
+    #needs: pre_job
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/gyselax/gyselalibxx_env:latest
