Add a markdown linter (#199)
Add a markdown linter to ensure standard markdown syntax is followed.
This is important for #193

--- a/.github/workflows/static_analyses.yml
+++ b/.github/workflows/static_analyses.yml
@@ -34,6 +34,14 @@ jobs:
       - name: Get Python dependencies
         run: |
           pip install numpy
+          pwd
+          ls -a
+      - name: Markdownlint
+        uses: DavidAnson/markdownlint-cli2-action@v19
+        with:
+          config: './.markdownlint.json'
+          globs: |
+            **/*.md
       - name: Check files
         id: markdown
         shell: bash
