--- a/.typos.toml
+++ b/.typos.toml
@@ -6,7 +6,7 @@ extend-ignore-re = ["capitalize()",
                     "ddc::\\S*",
                     "gko_exec->\\S*",
                     "on_finalize:",
-                    "colors.Normalize"
+                    "colors.Normalize",
                     "spack concretize",
                     "'center left'",
                     "'center right'",
