--- a/tests/math_tools/CMakeLists.txt
+++ b/tests/math_tools/CMakeLists.txt
@@ -4,7 +4,7 @@
 include(GoogleTest)
 
 add_executable(unit_tests_math_tools
-    test_differential_operators.cpp
+    test_gradient.cpp
     test_lnorm_tools.cpp
     test_partial_derivatives.cpp
     test_spline_2d_cache.cpp
